objects/Leave_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Delegated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Leave Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Leave-{00000}</displayFormat>
        <label>Leave Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>